--- a/css/snake.css
+++ b/css/snake.css
@@ -53,7 +53,7 @@ a.snake-link:hover {
 .snake-snakebody-block {
     margin: 0px;
     padding: 0px;
-    background-color: #FF0000;
+    background-color: #dddddd;
     position: absolute;
     border: 0px solid #000080;
     background-repeat: no-repeat;
@@ -64,7 +64,7 @@ a.snake-link:hover {
 .snake-food-block {
     margin: 0px;
     padding: 0px;
-    background-color: #FF0000;
+    background-color: #ffffff;
     border: 0px solid #ffffff;
     position: absolute;
 }
